logs/komodo.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.10.1.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.10.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/croniter'...
Listing './lib/python3.5/site-packages/croniter/tests'...
Listing './lib/python3.5/site-packages/croniter-0.3.20.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/delfick_app-0.7.3.egg-info'...
Listing './lib/python3.5/site-packages/delfick_error-1.7.8.egg-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask/testsuite'...
Listing './lib/python3.5/site-packages/flask/testsuite/static'...
Listing './lib/python3.5/site-packages/flask/testsuite/templates'...
Listing './lib/python3.5/site-packages/flask/testsuite/templates/nested'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps/admin'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps/admin/static'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps/admin/templates'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps/frontend'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/blueprintapp/apps/frontend/templates'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/config_package_app'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/flask_broken'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/flask_newext_package'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/flaskext'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/flaskext/oldext_package'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/lib'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/lib/python2.5'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/lib/python2.5/site-packages'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/lib/python2.5/site-packages/site_package'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps/admin'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps/admin/static'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps/admin/templates'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps/frontend'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/moduleapp/apps/frontend/templates'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/path'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/path/installed_package'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/subdomaintestmodule'...
Listing './lib/python3.5/site-packages/flask/testsuite/test_apps/subdomaintestmodule/static'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/input_algorithms'...
Listing './lib/python3.5/site-packages/input_algorithms-0.4.5.4.egg-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/komodo'...
Listing './lib/python3.5/site-packages/komodo/core_modules'...
Listing './lib/python3.5/site-packages/komodo/option_spec'...
Listing './lib/python3.5/site-packages/komodo/plugins'...
Listing './lib/python3.5/site-packages/komodo/server'...
Listing './lib/python3.5/site-packages/komodo/server/static'...
Listing './lib/python3.5/site-packages/komodo/server/templates'...
Listing './lib/python3.5/site-packages/komodo/widgets'...
Listing './lib/python3.5/site-packages/komodo/widgets/bundles'...
Listing './lib/python3.5/site-packages/komodo-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/logutils'...
Listing './lib/python3.5/site-packages/logutils-0.3.5.egg-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/namedlist-1.7.egg-info'...
Listing './lib/python3.5/site-packages/option_merge'...
Listing './lib/python3.5/site-packages/option_merge-0.9.9.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/rainbow_logging_handler'...
Listing './lib/python3.5/site-packages/rainbow_logging_handler/test'...
Listing './lib/python3.5/site-packages/rainbow_logging_handler-2.2.2.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/slumber'...
Listing './lib/python3.5/site-packages/slumber-0.7.1.egg-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.3.egg-info'...
Listing './lib/python3.5/site-packages/total_ordering-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
